k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-api
  namespace: default
  labels:
    app: journal-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: journal-api
  template:
    metadata:
      labels:
        app: journal-api
    spec:
      serviceAccountName: journal-api-sa
      nodeSelector:
        karpenter.sh/nodepool: default
      containers:
      - name: journal-api
        image: 324547056370.dkr.ecr.us-east-1.amazonaws.com/journal-api:v71
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /journal/health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /journal/health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: journal-api-service
  namespace: default
spec:
  selector:
    app: journal-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
